--- a/package.json
+++ b/package.json
@@ -26,12 +26,10 @@
   },
   "homepage": "https://github.com/danmarshall/indefinitely-typed#readme",
   "dependencies": {
-    "fs-extra": "^7.0.0",
-    "minimist": "^1.2.0"
+    "fs-extra": "^7.0.0"
   },
   "devDependencies": {
     "@types/fs-extra": "^5.0.4",
-    "@types/minimist": "^1.2.0",
     "@types/node": "^10.11.7",
     "typescript": "^3.1.3"
   }
