--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "DefinitelyTyped"
   ],
   "bin": {
-    "indefinitely-typed": "./bin/cli.js"
+    "indefinitely-typed": "./bin/cli2.js"
   },
   "main": "dist/index.js",
   "files": [
